# cpp-hello-world-revenge

./: .gitignore  CMakeLists.txt  README.md
Revenge/HelloKinect/: HelloKinectOpenGl.cpp  HelloKinectOpenNi.cpp
Revenge/HelloKinect/3DView/: glut.h  main.cpp
Revenge/HelloKinect/Vanilla/: HelloKinectVanilla.cpp  HelloKinectVanillaDepth.cpp  HelloKinectVanillaInfraRed.cpp
Revenge/HelloOpenCL/: main.cpp
Revenge/HelloOpenCL/v1/: main.cpp
Revenge/HelloOpenCL/v2/: main.cpp
Revenge/HelloOpenCV/: FrameOperations.cpp  SlamHelper.cpp  SlamHelper.hpp
Revenge/HelloWorld/: HelloWorld.cpp  OpenCVDisplayCamera.cpp
Revenge/OpenCVParallel/: HelloParallel.cpp
